feat: add get product endpoint
